# vineyard_backend

./: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dashboard  README.md  build-and-push.sh  dashboard-dev.html  db_postgres.sql  debug_start.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
app/: main.py  seed_vines.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: issues.py  login.py  maintenance.py  users.py  vines.py
app/core/: config.py  security.py
app/crud/: base.py  crud_issue.py  crud_maintenance.py  crud_user.py  crud_vine.py
app/db/: base.py  base_class.py  session.py
app/models/: issue.py  maintenance.py  user.py  vine.py
app/schemas/: issue.py  maintenance.py  token.py  user.py  vine.py
app/utils/: image_utils.py
migrations/: env.py
migrations/versions/: 001_allow_vines_without_tags.py  002_split_vine_inventory_tables.py  003_update_foreign_keys_to_vine_locations.py
